tests/good/c_operators.mil
function main () {
	a = 3;
	print(a);
	a += 3;
	print(a);
	a *= 2;
	print(a);
	a -= 2;
	print(a);
	a /= 2;
	print(a);
	a++;
	print(a);
	a--;
	print(a);
}