tests/bad/undeclared_variable.mil
function main () {
	a = 4;
	print(b);
}
